// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not show submitform and counter when submitted is true 1`] = `
<Fragment>
  <div
    className="view-holder"
  >
    <div
      className="game-container"
    >
      <div
        className="band-list"
      >
        <BandList
          bands={Array []}
        />
      </div>
      <div
        className="score"
      >
        <Score
          score={0}
        />
      </div>
      <div
        className="footer"
      >
        <div
          className="submit-band"
        />
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should render Play correctly with get ready message 1`] = `
<Fragment>
  <div
    className="view-holder"
  >
    <div
      className="game-container"
    >
      <div
        className="band-list"
      >
        <BandList
          bands={Array []}
        />
      </div>
      <div
        className="score"
      >
        <Score
          score={0}
        />
      </div>
      <div
        className="footer"
      >
        <MessageBox
          message="Get ready..."
        />
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should show SubmitHighscore instead if state is right 1`] = `
<Fragment>
  <div
    className="view-holder"
  >
    <Connect(SubmitHighscore)
      bands={
        Array [
          Object {
            "name": "one",
            "url": "www.1img.com",
          },
          Object {
            "name": "two",
            "url": "www.2img.com",
          },
          Object {
            "name": "three",
            "url": "www.3img.com",
          },
          Object {
            "name": "four",
            "url": "www.4img.com",
          },
        ]
      }
      difficulty={20}
      history={[Function]}
      inGame={true}
      score={76}
      submitted={false}
      used={
        Array [
          "one",
          "two",
          "three",
        ]
      }
    />
  </div>
</Fragment>
`;

exports[`should show bands in band-list 1`] = `
<Fragment>
  <div
    className="view-holder"
  >
    <div
      className="game-container"
    >
      <div
        className="band-list"
      >
        <BandList
          bands={
            Array [
              Object {
                "name": "one",
                "url": "www.1img.com",
              },
              Object {
                "name": "two",
                "url": "www.2img.com",
              },
              Object {
                "name": "three",
                "url": "www.3img.com",
              },
              Object {
                "name": "four",
                "url": "www.4img.com",
              },
            ]
          }
        />
      </div>
      <div
        className="score"
      >
        <Score
          score={76}
        />
      </div>
      <div
        className="footer"
      >
        <div
          className="submit-band"
        >
          <Connect(SubmitBand)
            bandBank={
              Array [
                Object {
                  "name": "",
                  "url": "",
                },
                Object {
                  "name": "",
                  "url": "",
                },
                Object {
                  "name": "",
                  "url": "",
                },
              ]
            }
            difficulty={20}
            inGame={true}
            previous="r"
            score={76}
            submitted={false}
            used={
              Array [
                "one",
                "two",
                "three",
              ]
            }
          />
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should show submitform when submitted is falsy 1`] = `
<Fragment>
  <div
    className="view-holder"
  >
    <div
      className="game-container"
    >
      <div
        className="band-list"
      >
        <BandList
          bands={Array []}
        />
      </div>
      <div
        className="score"
      >
        <Score
          score={0}
        />
      </div>
      <div
        className="footer"
      >
        <div
          className="submit-band"
        >
          <Connect(SubmitBand)
            bandBank={
              Array [
                Object {
                  "name": "",
                  "url": "",
                },
                Object {
                  "name": "",
                  "url": "",
                },
                Object {
                  "name": "",
                  "url": "",
                },
              ]
            }
            difficulty={20}
            inGame={true}
            previous="a"
            score={0}
            submitted={false}
            used={Array []}
          />
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;
